src/test/deca/context/valid/self/Readfloat.deca

{
    float x;
    x=readFloat() ;
    println(x);
}