src/test/deca/context/invalid/self/champNonDeclare2.deca
class A {
   void m() {
      println(m) ;
   }
}